--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
 </head>
-<body>
+<body onload="buscarPokemons()">
     <div class="board">
-        <div class="card"></div>
+    
     </div>
     <script src="scripts/index.js"></script>
 </body>
